Add auth service + move string values to constant folders + Add error messages to constants + setup a folder for auth controller + modify schema + fix comments + modify validator
